kibana/kibana-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: elk
  name: kibana
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec: 
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana-oss:7.10.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5601
          name: view
        volumeMounts:
        - name: config
          mountPath: /usr/share/kibana/config/kibana.yml
          readOnly: true
          subPath: kibana.yml
        - name: tz-seoul
          mountPath: /etc/localtime
      volumes:
      - name: config
        configMap:
          name: kibana-config
      - name: tz-seoul
        hostPath:
          path: /usr/share/zoneinfo/Asia/Seoul
