kibana/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: elk
  name: kibana
  labels:
    app: kibana
spec:
  ports:
  - port: 5601
    name: view
    targetPort: 5601
  selector:
    app: kibana
