kibana/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: elk
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kibana # use your domain
      http:
        paths:
          - backend:
              service:
                name: kibana
                port:
                 number: 5601
            path: / # use the path you want
            pathType: Prefix
